--- a/aula1.html
+++ b/aula1.html
@@ -40,7 +40,7 @@
             <p>Vamos ver algumas caracteristicas da cultura surda</p>
         </article>
         <article>
-            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRaBgOQCbbzOR2eUBW-2D24eRTVHtZweWuus7Rb1iu-JZ9UPKaBkxM-sFih4_xqAmN0BfTy0ymiO_Mp/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe><img src="" alt="Tela de TV"></iframe></p>
+            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRaBgOQCbbzOR2eUBW-2D24eRTVHtZweWuus7Rb1iu-JZ9UPKaBkxM-sFih4_xqAmN0BfTy0ymiO_Mp/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="560" height="315" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></iframe></p>
 
           
             <a href="documentos/apresentacao-conhecendo-cultura-surda.pdf" download="apresentacao-conhecendo-cultura-surda.pdf" type="application/pdf"> <br> Clique aqui para baixar o PDF sobre <strong>Conhecendo a Cultura Surda</strong></a>
