--- a/aula1.html
+++ b/aula1.html
@@ -6,7 +6,6 @@
     <title>Aula 1</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="../aprimoramento-sinais/estilos/media-query.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 
 </head>
@@ -35,29 +34,37 @@
     </header>
     <main>
         <article>
-            <h2>Cultura Surda
-            </h2>
+            <p>
+                <h2>Cultura Surda
+                </h2>
+            </p>
             <p>Vamos ver algumas caracteristicas da cultura surda</p>
         </article>
         <article>
-            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRaBgOQCbbzOR2eUBW-2D24eRTVHtZweWuus7Rb1iu-JZ9UPKaBkxM-sFih4_xqAmN0BfTy0ymiO_Mp/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="560" height="315" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></iframe></p>
+            <p><iframe class="slide" src="https://docs.google.com/presentation/d/e/2PACX-1vRaBgOQCbbzOR2eUBW-2D24eRTVHtZweWuus7Rb1iu-JZ9UPKaBkxM-sFih4_xqAmN0BfTy0ymiO_Mp/pubembed?start=false&loop=false&delayms=3000" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></iframe></p>
 
           
             <a href="documentos/apresentacao-conhecendo-cultura-surda.pdf" download="apresentacao-conhecendo-cultura-surda.pdf" type="application/pdf"> <br> Clique aqui para baixar o PDF sobre <strong>Conhecendo a Cultura Surda</strong></a>
 
         </article>
         <article>
-            <h2>Preze seus irmão surdos!</h2>
+            <p>
+                <h2>Preze seus irmão surdos!</h2>
+            </p>
             <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/2009849?q=surdo&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/2009849?q=surdo&p=par</a>
-            <h2>Um idioma que se vê</h2>
+            <p>
+                <h2>Um idioma que se vê</h2>
+            </p>
             <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/101998647?q=surdo&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/101998647?q=surdo&p=par</a>
-            <h2>Muralhas que bloqueiam a comunicação</h2>
+            <p>
+                <h2>Muralhas que bloqueiam a comunicação</h2>
+            </p>
             <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/101996482?q=cultura&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/101996482?q=cultura&p=par</a>
         </article>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSdbIvhvZpWlTr2cXJLcuoDuweezNmmVJMAd8-1fJw_8sbHx_4Wj9OBWNpagx4ZT6iab7ihvqSEN97b/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="397" height="590" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"><img src="" alt="Tela de TV"></iframe>
+        <iframe class="pdf"  src="https://docs.google.com/presentation/d/e/2PACX-1vSdbIvhvZpWlTr2cXJLcuoDuweezNmmVJMAd8-1fJw_8sbHx_4Wj9OBWNpagx4ZT6iab7ihvqSEN97b/pubembed?start=false&loop=false&delayms=3000" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"><img src="" alt="Tela de TV"></iframe>
 
         
         <a href="documentos/licoes-sign-writing.pdf" download="licoes-sign-writing.pdf" type="application/pdf"><p>Clique aqui para baixar o PDF sobre <strong>Lições sobre o SignWriting </p> </a>
@@ -68,8 +75,10 @@
 
 
         <article>
-            <h2>Sueli Ramalho é surda e fala 32 línguas de sinais.</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ADBUU4hshYE?si=MSlP7o5HbIjFtGRN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>
+                <h2>Sueli Ramalho é surda e fala 32 línguas de sinais</h2>
+            </p>
+            <div><iframe class="video" src="https://www.youtube.com/embed/ADBUU4hshYE?si=MSlP7o5HbIjFtGRN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </article>
     </main>
     <script>
