--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Sinais</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
    
   
@@ -38,8 +37,8 @@
     <main>
         <table>
             <tr>
-                <th>Data</th>
-                <td>Conteúdo</td>
+                <th class="titulo">Data</th>
+                <td class="titulo">Conteúdo</td>
             </tr>
             <tr>
                 <th>20/04/2025</th>
