--- a/aula1.html
+++ b/aula1.html
@@ -51,17 +51,17 @@
             <p>
                 <h2>Preze seus irmão surdos!</h2>
             </p>
-            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
+            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> <img class="imagem" src="imagens/torre.png" alt="Torre"> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/2009849?q=surdo&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/2009849?q=surdo&p=par</a>
             <p>
                 <h2>Um idioma que se vê</h2>
             </p>
-            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
+            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> <img class="imagem" src="imagens/torre.png" alt="Torre"> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/101998647?q=surdo&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/101998647?q=surdo&p=par</a>
             <p>
                 <h2>Muralhas que bloqueiam a comunicação</h2>
             </p>
-            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> como estudo pessoal.</p>
+            <p>Acesse o link abaixo para ler a matéria no <strong>WOL</strong> <img class="imagem" src="imagens/torre.png" alt="Torre"> como estudo pessoal.</p>
             <a href="https://wol.jw.org/pt/wol/d/r5/lp-t/101996482?q=cultura&p=par">https://wol.jw.org/pt/wol/d/r5/lp-t/101996482?q=cultura&p=par</a>
         </article>
         <iframe class="pdf"  src="https://docs.google.com/presentation/d/e/2PACX-1vSdbIvhvZpWlTr2cXJLcuoDuweezNmmVJMAd8-1fJw_8sbHx_4Wj9OBWNpagx4ZT6iab7ihvqSEN97b/pubembed?start=false&loop=false&delayms=3000" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"><img src="" alt="Tela de TV"></iframe>
