--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onresize="mudouTamanho()">
     <header>
         <h1>Site desenvolvido para as aulas de Aprimoramento de Sinais</h1>
-        <p>Você vai ter acesso as aulas caso perca em formato de vídeo e os arquivos que foram usados.</p>
+        <p>Você terá acesso às gravações das aulas e conteúdos complementares, caso perca presencialmente.</p>
         <span id="burguer" class="material-icons" onclick="clickMenu()" >dehaze</span>
         <menu id="itens">
             <ul>
