--- a/aula1.html
+++ b/aula1.html
@@ -18,7 +18,7 @@
         <menu id="itens">
             <ul>
                 <li><a href="index.html">Página Principal</a></li>
-                <li><a href="#">Aula 2</a></li>
+                <li><a href="aula2.html">Aula 2</a></li>
                 <li><a href="#">Aula 3</a></li>
                 <li><a href="#">Aula 4</a></li>
                 <li><a href="#">Aula 5</a></li>
