--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <menu id="itens">
             <ul>
                 <li><a href="aula1.html">Aula 1</a></li>
-                <li><a href="#">Aula 2</a></li>
+                <li><a href="aula2.html">Aula 2</a></li>
                 <li><a href="#">Aula 3</a></li>
                 <li><a href="#">Aula 4</a></li>
                 <li><a href="#">Aula 5</a></li>
@@ -49,36 +49,36 @@
                 <td>Princípios da sinalização correta</td>
             </tr>
             <tr>
-                <th>04/05/2025</th>
+                <th>18/05/2025</th>
                 <td>Estrutura de Frase</td>
             </tr>
             <tr>
-                <th>18/04/2025</th>
+                <th>25/05/2025</th>
                 <td>Personificação</td>
             </tr>
             <tr>
-                <th>25/05/2025</th>
+                <th>01/06/2025</th>
                 <td>Classificadores</td>
             </tr>
             <tr>
-                <th>01/06/2025</th>
+                <th>08/06/2025</th>
                 <td>Expressões Faciais</td>
                 
             </tr>
             <tr>
-                <th>08/06/2025</th>
+                <th>15/06/2025</th>
                 <td>Fluência</td>
             </tr>
             <tr>
-                <th>15/06/2025</th>
+                <th>22/06/2025</th>
                 <td>Naturalidade</td>
             </tr>
             <tr>
-                <th>22/06/2025</th>
+                <th>29/06/2025</th>
                 <td>Teatro</td>
             </tr>
             <tr>
-                <th>29/06/2025</th>
+                <th>06/07/2025</th>
                 <td>Teatro</td>
             </tr>
         </table>
