--- a/aula2.html
+++ b/aula2.html
@@ -37,11 +37,11 @@
             <article>
                 <h2>Aprendizado</h2>
                 <p>Nosso cérebro tem uma capacidade incrível de aprendizado</p>
-                <video controls  id="interno">
-                    <source src="./documentos/neuronio.mp4" type="video/mp4" >
-
-
-                </video>
+                <div>
+                    <video controls  id="videp">
+                        <source src="./documentos/neuronio.mp4" type="video/mp4" >
+                    </video>
+                </div>
 
             </article>
 
