--- a/aula2.html
+++ b/aula2.html
@@ -38,7 +38,7 @@
                 <h2>Aprendizado</h2>
                 <p>Nosso cérebro tem uma capacidade incrível de aprendizado</p>
                 <div>
-                    <video controls  id="video">
+                    <video controls  id="interno">
                         <source src="./documentos/neuronio.mp4" type="video/mp4" >
                     </video>
                 </div>
