--- a/aula2.html
+++ b/aula2.html
@@ -37,11 +37,9 @@
             <article>
                 <h2>Aprendizado</h2>
                 <p>Nosso cérebro tem uma capacidade incrível de aprendizado</p>
-                <div>
-                    <video controls  id="interno">
-                        <source src="./documentos/neuronio.mp4" type="video/mp4" >
-                    </video>
-                </div>
+                <div><iframe class="video" src="https://player.vimeo.com/video/1079196134?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="neuronio"></iframe></div>
+               
+              
 
             </article>
 
