correção de ortografia

--- a/aula2.html
+++ b/aula2.html
@@ -54,7 +54,7 @@
 
                 <article>
                     <h2>Gravação</h2>
-                    <p>A aula foi gravada par aqueles que não puderam estar presente assitir e quem desejar ver novamente.</p>
+                    <p>A aula foi gravada para aqueles que não puderam estar presente assistir e quem desejar ver novamente.</p>
                     <p>Mas o vídeo por segurança está ficando no <strong>Google Drive </strong>de forma privada. Aqueles que desejarem assistir é só <strong>clicar na imagem</strong> abaixo que será direcionada para o <strong>Google Drive</strong> onde poderão perdir a acesso para assistir os vídeos.  </p>
                     <a href="https://drive.google.com/drive/folders/1kudPmz4-sqDiNWqsz8l0t5Ej8Fp-aUoX?usp=drive_link" target="_blank" ><img class="imagem" src="imagens/google-drive.png" alt="Logo Google Drive"></a>
 
