--- a/aula1.html
+++ b/aula1.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Página Principal</a></li>
                 <li><a href="aula2.html">Aula 2</a></li>
-                <li><a href="#">Aula 3</a></li>
+                <li><a href="aula3.html">Aula 3</a></li>
                 <li><a href="#">Aula 4</a></li>
                 <li><a href="#">Aula 5</a></li>
                 <li><a href="#">Aula 6</a></li>
@@ -81,26 +81,8 @@
             <div><iframe class="video" src="https://www.youtube.com/embed/ADBUU4hshYE?si=MSlP7o5HbIjFtGRN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </article>
     </main>
-    <script>
-        function mudouTamanho(){
-            if (window.innerWidth >= 768 ){
-                itens.style.display='block'
+    <script src ="script.js" ></script>
 
-            }else {
-                itens.style.display = 'none'
-            }
-        }
-
-        function clickMenu(){
-            if (itens.style.display =='block'){
-                itens.style.display ='none'
-            } else{
-                itens.style.display ='block'
-            }
-            
-        }
-    </script>
-
-    <footer>Aula do Tio F E L I P E</footer>
+    <footer>Aula do Tio FELIPE</footer>
 </body>
 </html>
