--- a/aula2.html
+++ b/aula2.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Página Principal</a></li>
                 <li><a href="aula1.html">Aula 1</a></li>
-                <li><a href="#">Aula 3</a></li>
+                <li><a href="aula3.html">Aula 3</a></li>
                 <li><a href="#">Aula 4</a></li>
                 <li><a href="#">Aula 5</a></li>
                 <li><a href="#">Aula 6</a></li>
@@ -65,28 +65,10 @@
         </main>
 
 
-<script>
-    function mudouTamanho(){
-        if (window.innerWidth >= 768 ){
-            itens.style.display='block'
-
-        }else {
-            itens.style.display = 'none'
-        }
-    }
-
-    function clickMenu(){
-        if (itens.style.display =='block'){
-            itens.style.display ='none'
-        } else{
-            itens.style.display ='block'
-        }
-        
-    }
-</script>
+        <script src ="script.js" ></script>
 
 <footer>
-        <p>Aula do Tio F E L I P E</p>
+        <p>Aula do Tio FELIPE</p>
         <p>Participação Espercial:</p>
         <p>Tia Dani e Tia Lorena</p>
 
